manifests/backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
        backstage.io/kubernetes-id: backstage
    spec:
      serviceAccountName: backstage
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: backstage
          image: ghcr.io/zazanicholas01/backstage-portal:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7007
              name: http
          readinessProbe:
            httpGet:
              path: /api/catalog/entities
              port: 7007
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 7007
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: app-config
              mountPath: /app/app-config.production.yaml
              subPath: app-config.production.yaml
      volumes:
        - name: app-config
          configMap:
            name: backstage-app-config
