manifests/backstage/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  namespace: backstage
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
      sectionName: iot-http
  
  hostnames:
    - backstage.local
  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      
      backendRefs:
        - name: backstage
          port: 7007
